--- a/Projects/Arkanoid/Arkanoid.vcxproj
+++ b/Projects/Arkanoid/Arkanoid.vcxproj
@@ -80,7 +80,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\Users\David\workspaceCPP\Libraries\include</IncludePath>
-    <LibraryPath>C:\Users\David\workspaceCPP\Libraries\glfw_x64\lib-vc2019;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Users\David\workspaceCPP\Libraries\irrKlang;C:\Users\David\workspaceCPP\Libraries\glfw_x64\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -124,7 +124,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
